L-01: Expand Menu and MenuItem models with new restaurant-related attributes
- Add new columns to Menu and MenuItem: categories, vegetarian, price, etc.
- Add seeds with new attributes
- Update tests to cover new columns and features

--- a/test/fixtures/menus.yml
+++ b/test/fixtures/menus.yml
@@ -1,7 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: Breakfast
+  description: "Morning menu items"
+  active: true
+  categories: "[\"Breakfast\"]"
 
 two:
-  name: MyString
+  name: Lunch
+  description: "Midday menu items"
+  active: true
+  categories: "[\"Lunch\", \"Specials\"]"
