Front end: create views for all actions
- Add views for all controllers
- Update controllers to return html
- Fix tests to adjust to the new pattern
- Update docker to run with FE configuration
- Add tailwind css for styling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
-version: '3.8'
+version: "3.8"
+
 services:
   web:
     build: .
+    command: ./bin/dev
     volumes:
       - .:/app
     ports:
       - "3000:3000"
+      - "35729:35729"
     environment:
       RAILS_ENV: development
+      PORT: 3000
+      TAILWIND_DISABLE_WATCHMAN: "1"
+    tty: true
+    stdin_open: true
